--- a/css/kiss/style.css
+++ b/css/kiss/style.css
@@ -48,7 +48,7 @@ body {
     padding-top: 20px;
     padding-left: 40px;
     color: rgb(133, 177, 133);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
 
 .content {
